k8s-apps/manifests/develop/argocd/Service-argocd-applicationset-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: applicationset-controller
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-applicationset-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.0
    helm.sh/chart: argo-cd-10.2.3
  name: argocd-applicationset-controller
  namespace: argocd
spec:
  ports:
    - name: http-webhook
      port: 7000
      targetPort: webhook
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-applicationset-controller
  type: ClusterIP
