k8s-apps/manifests/develop/argocd/Service-argocd-repo-server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: v3.5.0
    helm.sh/chart: argo-cd-10.2.3
  name: argocd-repo-server
  namespace: argocd
spec:
  ports:
    - name: tcp-repo-server
      port: 8081
      protocol: TCP
      targetPort: repo-server
  selector:
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/name: argocd-repo-server
